--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         <section id="contact">
             <form action="">
 
-                <div class="really" ><label for="">Name <input type="text"></label></div>
-                <div class="really" ><label for="">Email <input type="text"></label></div>
-                <div class="really" ><label for="">Phone Number<input type="text"></label></div>
-                <div class="really" ><label for=""> Message  <textarea name="" id="" cols="30" rows="10"></textarea></label></div>
+                <div class="really" ><label for="">Name </label> <input type="text"></div>
+                <div class="really" ><label for="">Email</label> <input type="text"></div>
+                <div class="really" ><label for="">Phone Number</label> <input type="text"></div>
+                <div class="really" ><label for=""> Message  </label><textarea name="" id="" cols="30" rows="10"></textarea></div>
 
                 <button > <a href="#about"></a>Submit</button>
             </form>
